CSV files successfully parsed
