# src/main/java/dev/gnagoli/mediamark/demo/web/ProductResource.java
@@ -2,6 +2,11 @@ package dev.gnagoli.mediamark.demo.web;
 
 import dev.gnagoli.mediamark.demo.domain.ProductEntity;
 import dev.gnagoli.mediamark.demo.service.ProductService;
+import dev.gnagoli.mediamark.openapi.api.ProductsApi;
+import dev.gnagoli.mediamark.openapi.api.ProductsApiDelegate;
+import dev.gnagoli.mediamark.openapi.model.Category;
+import dev.gnagoli.mediamark.openapi.model.Product;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -9,7 +14,7 @@ import java.io.IOException;
 import java.util.List;
 
 @RestController
-public class ProductResource {
+public class ProductResource implements ProductsApi {
     private final ProductService productService;
 
 
@@ -17,7 +22,96 @@ public class ProductResource {
         this.productService = productService;
     }
 
-    @GetMapping("product/data")
+    /**
+     * @return
+     */
+    @Override
+    public ProductsApiDelegate getDelegate() {
+        return ProductsApi.super.getDelegate();
+    }
+
+    /**
+     * DELETE /products/{productId} : deleteProduct
+     * deleteProduct
+     *
+     * @param productId the product id (required)
+     * @return successful operation (status code 204)
+     */
+    @Override
+    public ResponseEntity<Void> deleteProducts(String productId) {
+        return ProductsApi.super.deleteProducts(productId);
+    }
+
+    /**
+     * GET /products/{productId} : get Product by id
+     * endpoint to retreive product by id
+     *
+     * @param productId the product id (required)
+     * @return successful operation (status code 200)
+     * or product not found (status code 400)
+     * or Server Error (status code 500)
+     */
+    @Override
+    public ResponseEntity<Product> getProduct(String productId) {
+        return ProductsApi.super.getProduct(productId);
+    }
+
+    /**
+     * GET /products/{productId}/categorie : get categories by product id
+     * endpoint to retreive product by id
+     *
+     * @param productId the product id (required)
+     * @return successful operation (status code 200)
+     * or product not found (status code 400)
+     * or Server Error (status code 500)
+     */
+    @Override
+    public ResponseEntity<List<Category>> getProductCategory(String productId) {
+        return ProductsApi.super.getProductCategory(productId);
+    }
+
+    /**
+     * GET /products : get Product list
+     * endpoint to get product list
+     *
+     * @return successful operation (status code 200)
+     * or product not found (status code 400)
+     * or Server Error (status code 500)
+     */
+    @Override
+    public ResponseEntity<List<Product>> getProducts() {
+        return ProductsApi.super.getProducts();
+    }
+
+    /**
+     * PATCH /products : updateProduct
+     * endpoint to update an existing product
+     *
+     * @param product (optional)
+     * @return successful operation (status code 200)
+     * or product not found (status code 400)
+     * or Server Error (status code 500)
+     */
+    @Override
+    public ResponseEntity<Product> patchProducts(Product product) {
+        return ProductsApi.super.patchProducts(product);
+    }
+
+    /**
+     * POST /products : saveProduct
+     * endpoint to save a new product
+     *
+     * @param product (optional)
+     * @return successful operation (status code 200)
+     * or product not found (status code 400)
+     * or Server Error (status code 500)
+     */
+    @Override
+    public ResponseEntity<Product> postProducts(Product product) {
+        return ProductsApi.super.postProducts(product);
+    }
+
+    @GetMapping("products/data")
     public List<ProductEntity> fromCSV() throws IOException {
         return productService.readFromCsv();
     }
