# src/main/resources/api.yaml
@@ -1,4 +1,9 @@
 openapi: 3.1.0
+tags:
+  - name: Category
+    description: the categories api
+  - name: Product
+    description: the product api
 info:
   version: '1.0'
   title: api
@@ -73,7 +78,7 @@ paths:
   '/products/{productId}/categorie':
     get:
       tags:
-        - Product
+        - Category
       summary: get categories by product id
       description: endpoint to retreive product by id
       operationId: get-product-category
@@ -90,7 +95,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
         '400':
           description: product not found
           content:
@@ -113,20 +120,22 @@ paths:
       summary: get Product list
       description: endpoint to get product list
       operationId: get-products
-      parameters:
-        - name: productId
-          in: path
-          description: the product id
-          required: true
-          schema:
-            type: string
+      #      parameters:
+      #        - name: productId
+      #          in: path
+      #          description: the product id
+      #          required: true
+      #          schema:
+      #            type: string
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Product'
         '400':
           description: product not found
           content:
@@ -211,7 +220,7 @@ paths:
   '/categories/{categoryId}':
     get:
       tags:
-        - Product
+        - Category
       summary: get Category by id
       description: endpoint to retreive category by id
       operationId: get-category
@@ -228,7 +237,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                $ref: '#/components/schemas/Category'
         '400':
           description: product not found
           content:
@@ -283,7 +292,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
         '400':
           description: product not found
           content:
@@ -302,7 +313,7 @@ paths:
     post:
       tags:
         - Category
-      summary: saveProduct
+      summary: saveCategory
       description: endpoint to save a new categories
       operationId: post-categorie
       requestBody:
@@ -365,18 +376,14 @@ paths:
       servers:
         - url: 'http://localhost:3000'
           description: product api
-tags:
-  - name: Category
-    description: the categories api
-  - name: Product
-    description: the product api
+
 components:
   schemas:
     Category:
       type: object
       title: Product
       properties:
-        productId:
+        categoryId:
           type: string
           description: The product ID.
         name:
@@ -403,7 +410,7 @@ components:
     Product:
       type: object
       properties:
-        categoryId:
+        productId:
           type: string
           description: The product ID.
         name:
